# SnitchPay

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  brand.md  package-lock.json  package.json
programs/invoice/: Cargo.toml
programs/invoice/src/: lib.rs
programs/payout/: Cargo.toml
programs/payout/src/: lib.rs
programs/shared_wallet/: Cargo.toml
programs/shared_wallet/src/: lib.rs
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
services/: idl.ts  invoice.ts  payout.ts  shared-wallet.ts  solana.ts  vault.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/confidential-invoices/: route.ts
src/app/api/payments/confirm/: route.ts
src/app/api/payments/status/: route.ts
src/app/api/send-receipt/: route.ts
src/app/transactions/[account]/[shareId]/[invoiceId]/: page.tsx  public-invoice-payment.tsx
src/app/transactions/[account]/[shareId]/[invoiceId]/explorer/: page.tsx
src/components/: snitch-landing-page.tsx
src/components/ui/: button-group.tsx  checkbox.tsx
src/lib/: firebase.ts  payment-confirmations.ts
tests/: invoice.ts  payout.ts  shared-wallet.ts  vault.ts
