[package]
name = "shared_wallet"
version = "0.1.0"
description = "Snitch shared wallet permissions program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shared_wallet"

[features]
default = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
